--- a/private_dot_config/home-manager/home.nix.tmpl
+++ b/private_dot_config/home-manager/home.nix.tmpl
@@ -56,6 +56,7 @@ in
     pkgs.pipx
     pkgs.rclone
     pkgs.pyright
+    pkgs.mosh
     # Only manage gui programs if we're running on nixos with a GUI,
     # I don't want to mess around with nixgl so we only do gui stuff on 
     # real nixos
