Fix mosh for high-latency connections

--- a/private_dot_config/home-manager/home.nix.tmpl
+++ b/private_dot_config/home-manager/home.nix.tmpl
@@ -164,6 +164,7 @@ in
   #  /etc/profiles/per-user/traverseda/etc/profile.d/hm-session-vars.sh
   #
   home.sessionVariables = {
+    LOCALE_ARCHIVE = "/usr/lib/locale/locale-archive";
     # EDITOR = "emacs";
   };
 
