We now manage nixos with chezmoi

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,3 +1,7 @@
 [data]
 guiapps = false
 rosapps = false
+manage_nixos = false
+nvidia_prime = false
+prime_intel_bus = "PCI:0:2:0"
+prime_nvidia_bus = "PCI:14:0:0"
