Set up plasma desktops

--- a/private_dot_config/home-manager/home.nix.tmpl
+++ b/private_dot_config/home-manager/home.nix.tmpl
@@ -190,6 +190,21 @@ in
 
   programs.plasma = {
     enable = true;
+    configFile = {
+      "kwinrc"."Desktops"."Id_1" = "1";
+      "kwinrc"."Desktops"."Id_2" = "2";
+      "kwinrc"."Desktops"."Id_3" = "3";
+      "kwinrc"."Desktops"."Id_4" = "4";
+      "kwinrc"."Desktops"."Id_5" = "5";
+      "kwinrc"."Desktops"."Id_6" = "6";
+      "kwinrc"."Desktops"."Id_7" = "7";
+      "kwinrc"."Desktops"."Id_8" = "8";
+      "kwinrc"."Desktops"."Id_9" = "9";
+      "kwinrc"."Desktops"."Id_10" = "10";
+
+      "kwinrc"."Desktops"."Number" = 10;
+      "kwinrc"."Desktops"."Rows" = 2;
+    };
   };
   {{ end }}
 
