--- a/private_dot_config/home-manager/home.nix.tmpl
+++ b/private_dot_config/home-manager/home.nix.tmpl
@@ -199,7 +199,7 @@ in
       colorScheme = "BreezeDark";
     };
     shortcuts.konsole = {
-      "_launch" = "Meta+Return";
+      "launch" = "Meta+Return";
     };
     shortcuts.kwin = {
       "Switch to Desktop 1" = "Meta+1"; 
@@ -224,17 +224,6 @@ in
       "Window to Desktop 10" = "Meta+)";
     };
     configFile = {
-      "kwinrc"."Desktops"."Id_1" = "1";
-      "kwinrc"."Desktops"."Id_2" = "2";
-      "kwinrc"."Desktops"."Id_3" = "3";
-      "kwinrc"."Desktops"."Id_4" = "4";
-      "kwinrc"."Desktops"."Id_5" = "5";
-      "kwinrc"."Desktops"."Id_6" = "6";
-      "kwinrc"."Desktops"."Id_7" = "7";
-      "kwinrc"."Desktops"."Id_8" = "8";
-      "kwinrc"."Desktops"."Id_9" = "9";
-      "kwinrc"."Desktops"."Id_10" = "10";
-
       "kwinrc"."Desktops"."Number" = 10;
       "kwinrc"."Desktops"."Rows" = 2;
     };
