--- a/private_dot_config/home-manager/home.nix.tmpl
+++ b/private_dot_config/home-manager/home.nix.tmpl
@@ -85,6 +85,7 @@ in
     pkgs.nextcloud-client
     pkgs.vscodium
     pkgs.inkscape
+    pkgs.blender
     pkgs.gimp
     pkgs.krita
     pkgs.qgroundcontrol
