Added in initial work to multiplex wifi interface

--- a/private_dot_config/home-manager/home.nix.tmpl
+++ b/private_dot_config/home-manager/home.nix.tmpl
@@ -59,6 +59,9 @@ in
     pkgs.poetry
     pkgs.nmap
     pkgs.dig
+    pkgs.tree
+    pkgs.curl
+    pkgs.wget
 
     {{ if .rosapps }}
     ros.legacyPackages.x86_64-linux.noetic.rostopic
@@ -90,6 +93,7 @@ in
     pkgs.signal-desktop
     pkgs.element-desktop
     pkgs.vlc
+    pkgs.filelight
     #Logitech peripheral management
     pkgs.solaar
     #libreoffice I guess
