--- a/private_dot_nix-os/configuration.nix.tmpl
+++ b/private_dot_nix-os/configuration.nix.tmpl
@@ -24,6 +24,8 @@ in
   virtualisation.waydroid.enable = true;
   system.copySystemConfiguration = true;
 
+  hardware.opengl.enable = true;
+
   #Puts fonts in /run/current-system/sw/share/X11/fonts
   fonts.fontDir.enable = true;
 
